...
      }}
    >
      {!userEmail ? (
        <Stack.Screen name="Login" component={LoginScreen} options={{ headerShown: false }} />
      ) : (
        <>
          <Stack.Screen name="Routes" component={RoutesScreen} options={{ title: 'Minhas Rotas' }} />
          <Stack.Screen
            name="Settings"
            component={SettingsScreen}
            options={{ title: 'Configurações' }}
          />
          <Stack.Screen
...
          />
          <Stack.Screen
            name="RouteDetail"
            component={RouteDetailScreen}
            options={({ route }) => ({ title: `Rota #${route.params.routeId}` })}
          />
          <Stack.Screen name="Delivery" component={DeliveryScreen} options={{ title: 'Entrega' }} />
          <Stack.Screen name="Map" component={MapScreen} options={{ title: 'Mapa da Rota' }} />
        </>
      )}
    </Stack.Navigator>
  );
}
...
