...
                disabled={isStartDisabled}
                style={styles.flexButton}
              />
            </View>
          </View>

          <Text style={styles.sectionTitle}>Paradas</Text>

          {waypoints.map((waypoint) => {
            const meta = getWaypointMeta(waypoint);
            const waypointDisabled = isRouteCreated;

            return (
...
