appId: com.oliverbill.fastroutemobile
---
- launchApp:
    clearState: true

- assertVisible: "Minhas Rotas"
- tapOn: "Criar Rota"

- assertVisible: "Importar arquivo de rota"
- tapOn: "Abrir arquivos locais"

- assertVisible: "anapaula.csv"
- tapOn: "Documents.csv"

- assertVisible: "Documents.csv"
- tapOn: "50"
- eraseText
- inputText: "100"
- hideKeyboard

- tapOn: "Confirmar importação"
- assertVisible: "Rota importada com sucesso"
- tapOn: "OK"
