appId: com.oliverbill.fastroutemobile
---
- runFlow: ../_bootstrap-e2e.yaml

- tapOn: "Criar Rota"

- assertVisible: "Importar arquivo de rota"
- assertVisible: "Abrir arquivos locais"
- assertVisible: "EPS (METROS)"
- assertVisible: "Voltar"
- tapOn: "Voltar"
- assertVisible: "Minhas Rotas"
